Added Heading 1 to crockpot-italian-chicken.html

--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -5,6 +5,6 @@
         <title>TOP: Recipes Project | Crockpot Italian Chicken</title>
     </head>
     <body>
-        
+        <h1>Crockpot Italian Chicken</h1>
     </body>
 </html>
