--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>TOP: Recipes Project</title>
     </head>
     <body>
-        
+        <h1>Odin Recipes</h1>
+
+        <a href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a>
     </body>
 </html>
