--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>TOP: Recipes Project</title>
+        <title>TOP: Recipes Project | Home</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
