--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Crockpot Italian Chicken</h1>
+
+        <img src="../images/crockpot-italian-chicken.jpg" alt="Crockpot Italian Chicken" height="300" width="400">
     </body>
 </html>
