--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <h1>Crockpot Italian Chicken</h1>
-
         <img src="../images/crockpot-italian-chicken.jpg" alt="Crockpot Italian Chicken" height="300" width="400">
+
+        <h2>Description</h2>
+        <p> You only need three ingredients for this delicious dinner meal. It is one of my 
+            favorite meals to make during the week because it's so simple and 
+            ready to eat as soon as I get home! 
+        </p>
     </body>
 </html>
