Added an ingredients section to the crockpot italian chicken recipe page

--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -13,5 +13,12 @@
             favorite meals to make during the week because it's so simple and 
             ready to eat as soon as I get home! 
         </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>4 boneless chicken breasts</li>
+            <li>1 (16 oz.) bottle of Italian dressing</li>
+            <li>1/4 cup of grated Parmesan cheese</li>
+        </ul>
     </body>
 </html>
