Added a steps section to the crockpot italian chicken recipe page

--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -20,5 +20,12 @@
             <li>1 (16 oz.) bottle of Italian dressing</li>
             <li>1/4 cup of grated Parmesan cheese</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Stir the Italian dressing and Parmesan cheese together in a bowl.</li>
+            <li>Place the chicken in the crockpot, and pour the dressing mixture over the chicken.</li>
+            <li>Cover and cook on low for about 8 hours until chicken is tender and the juices run clear.</li>
+        </ol>
     </body>
 </html>
