Added a link to the Simple BBQ Ribs recipe. Recipes are kept in an unordered list now so that they appear on different lines.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a>
+        <ul>
+            <li><a href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
+            <li><a href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
+        </ul>
     </body>
 </html>
