Added the main heading and an image to the Simple BBQ Ribs recipe.

--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -5,6 +5,7 @@
         <title>TOP: Recipes Project | Simple BBQ Ribs</title>
     </head>
     <body>
-        
+        <h1>Simple BBQ Ribs</h1>
+        <img src="../images/simple-bbq-ribs.jpg" alt="Simple BBQ Ribs" height="300" width="400">
     </body>
 </html>
