Added a description section to the Simple BBQ Ribs recipe.

--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -7,5 +7,11 @@
     <body>
         <h1>Simple BBQ Ribs</h1>
         <img src="../images/simple-bbq-ribs.jpg" alt="Simple BBQ Ribs" height="300" width="400">
+
+        <h2>Description</h2>
+        <p>All you need are five simple ingredients to make these tasty BBQ ribs.
+            They are so tender and full of flavor. You will never want to look for another 
+            BBQ rib recipe again!
+        </p>
     </body>
 </html>
