Added an ingredients section to the Simple BBQ Ribs recipe.

--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -13,5 +13,14 @@
             They are so tender and full of flavor. You will never want to look for another 
             BBQ rib recipe again!
         </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 1/2 pounds of country-style pork ribs</li>
+            <li>2 tablespoons of kosher salt</li>
+            <li>1 tablespoon of garlic powder</li>
+            <li>1 teaspoon of ground black pepper</li>
+            <li>1 cup of barbeque sauce</li>
+        </ul>
     </body>
 </html>
