Added a steps section to the Simple BBQ Ribs recipe.

--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -22,5 +22,24 @@
             <li>1 teaspoon of ground black pepper</li>
             <li>1 cup of barbeque sauce</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Gather all of your ingredients.</li>
+            <li>Place the ribs in a large pot and cover with water.</li>
+            <li>Stir in the kosher salt, garlic powder, and pepper, and bring the water 
+                to a boil over medium heat. Continue boiling for 40 to 45 minutes until 
+                the ribs are tender.
+            </li>
+            <li>Preheat the oven to 325 degrees F while the ribs are boiling.</li>
+            <li>Remove the ribs from the pot and place them in a 9x13-inch baking dish.
+                Pour the barbeque sauce over the ribs. Cover the baking dish with aluminum 
+                foil.
+            </li>
+            <li>Bake for 1 to 1 1/2 hours until the internal temperature of the pork is 
+                160 degrees F.
+            </li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
     </body>
 </html>
