--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
             <li><a href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
+            <li><a href="./recipes/mexican-quesadilla-casserole.html">Mexican Quesadilla Casserole</a></li>
         </ul>
     </body>
 </html>
