--- a/recipes/mexican-quesadilla-casserole.html
+++ b/recipes/mexican-quesadilla-casserole.html
@@ -5,6 +5,7 @@
         <title>TOP: Recipes Project | Mexican Quesadilla Casserole</title>
     </head>
     <body>
-        
+        <h1>Mexican Quesadilla Casserole</h1>
+        <img src="../images/mexican-quesadilla-casserole.jpg" alt="Mexican Quesadilla Casserole" height="400" width="400">
     </body>
 </html>
