--- a/recipes/mexican-quesadilla-casserole.html
+++ b/recipes/mexican-quesadilla-casserole.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Mexican Quesadilla Casserole</h1>
         <img src="../images/mexican-quesadilla-casserole.jpg" alt="Mexican Quesadilla Casserole" height="400" width="400">
+
+        <h2>Description</h2>
+        <p>This recipe is super tasty and will have you feeling like you've been transported to Mexico!</p>
     </body>
 </html>
