Added an ingredients section to the Mexican Quesadilla Casserole recipe.

--- a/recipes/mexican-quesadilla-casserole.html
+++ b/recipes/mexican-quesadilla-casserole.html
@@ -10,5 +10,24 @@
 
         <h2>Description</h2>
         <p>This recipe is super tasty and will have you feeling like you've been transported to Mexico!</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Cooking Spray</li>
+            <li>1 pound of ground beef</li>
+            <li>1/2 cup of chopped onion</li>
+            <li>1 (15 oz.) can of tomato sauce</li>
+            <li>1 (15 oz.) can of black beans, rinsed and drained</li>
+            <li>1 (14.5 oz.) can of diced tomatoes with lime juice and cilantro</li>
+            <li>1 (8.75 oz.) can of whole kernel sweet corn</li>
+            <li>1 (4.5 oz.) can of chopped green chiles, drained</li>
+            <li>2 teaspoons of chili powder</li>
+            <li>1 teaspoon of ground cumin</li>
+            <li>1 teaspon of minced garlic</li>
+            <li>1/2 teaspon dried oregano</li>
+            <li>1/2 teaspoon red pepper flakes</li>
+            <li>6 flour tortillas</li>
+            <li>2 cups of shredded Cheddar cheese</li>
+        </ul>
     </body>
 </html>
