Added a steps section to the Mexican Quesadilla Casserole recipe.

--- a/recipes/mexican-quesadilla-casserole.html
+++ b/recipes/mexican-quesadilla-casserole.html
@@ -29,5 +29,34 @@
             <li>6 flour tortillas</li>
             <li>2 cups of shredded Cheddar cheese</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 350 degrees F. Prepare a 13x9-inch baking dish with cooking spray.</li>
+            <li>
+                Heat a large skillet over medium-high heat. Cook and stir beef and onion in the hot skillet 
+                for 5 to 7 minutes until beef is completely browned; drain and discard the grease.
+            </li>
+            <li>
+                Stir tomato sauce, black beans, diced tomatoes with lime juice and cilantro, corn, and chopped 
+                green chiles into the ground beef mixture.
+            </li>
+            <li>Season with chili powder, cumin, garlic, oregano, and red pepper flakes. 
+                Reduce heat to low and cook mixture at a simmer for 5 minutes.
+            </li>
+            <li>
+                Spread about 1/2 cup of the beef mixture into the bottom of the baking dish; 
+                top with 3 tortillas, overlapping if needed.
+            </li>
+            <li>
+                Spread another 1/2 cup of the beef mixture over the tortillas. 
+                Sprinkle 1 cup of the Cheddar cheese over the beef.
+            </li>
+            <li>Finish with layers of remaining tortillas, beef mixture, and Cheddar cheese, respectively.</li>
+            <li>
+                Bake for 15 minutes until heated throughout and cheese is melted. 
+                Cool for 5 minutes before serving.
+            </li>
+        </ol>
     </body>
 </html>
