--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TOP: Recipes Project | Crockpot Italian Chicken</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Crockpot Italian Chicken</h1>
