--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>TOP: Recipes Project | Simple BBQ Ribs</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Simple BBQ Ribs</h1>
