Added styles to index.html and all h1 elements.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
-            <li><a href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
-            <li><a href="./recipes/mexican-quesadilla-casserole.html">Mexican Quesadilla Casserole</a></li>
+            <li class="nav-item"><a class="nav-link" href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
+            <li class="nav-item"><a class="nav-link" href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
+            <li class="nav-item"><a class="nav-link" href="./recipes/mexican-quesadilla-casserole.html">Mexican Quesadilla Casserole</a></li>
         </ul>
     </body>
 </html>
