Practiced CSS by styling the crockpot italian chicken recipe.

--- a/recipes/crockpot-italian-chicken.html
+++ b/recipes/crockpot-italian-chicken.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Crockpot Italian Chicken</h1>
-        <img src="../images/crockpot-italian-chicken.jpg" alt="Crockpot Italian Chicken" height="300" width="400">
+        <img class="portrait" src="../images/crockpot-italian-chicken.jpg" alt="Crockpot Italian Chicken">
 
         <h2>Description</h2>
         <p> You only need three ingredients for this delicious dinner meal. It is one of my 
@@ -17,9 +17,9 @@
 
         <h2>Ingredients</h2>
         <ul>
-            <li>4 boneless chicken breasts</li>
-            <li>1 (16 oz.) bottle of Italian dressing</li>
-            <li>1/4 cup of grated Parmesan cheese</li>
+            <li class="main ingredient">4 boneless chicken breasts</li>
+            <li class="ingredient">1 (16 oz.) bottle of Italian dressing</li>
+            <li class="ingredient">1/4 cup of grated Parmesan cheese</li>
         </ul>
 
         <h2>Steps</h2>
