Added classes to the simple bbq ribs recipe's page to add styles.

--- a/recipes/simple-bbq-ribs.html
+++ b/recipes/simple-bbq-ribs.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Simple BBQ Ribs</h1>
-        <img src="../images/simple-bbq-ribs.jpg" alt="Simple BBQ Ribs" height="300" width="400">
+        <img class="portrait" src="../images/simple-bbq-ribs.jpg" alt="Simple BBQ Ribs">
 
         <h2>Description</h2>
         <p>All you need are five simple ingredients to make these tasty BBQ ribs.
@@ -17,11 +17,11 @@
 
         <h2>Ingredients</h2>
         <ul>
-            <li>2 1/2 pounds of country-style pork ribs</li>
-            <li>2 tablespoons of kosher salt</li>
-            <li>1 tablespoon of garlic powder</li>
-            <li>1 teaspoon of ground black pepper</li>
-            <li>1 cup of barbeque sauce</li>
+            <li class="main ingredient">2 1/2 pounds of country-style pork ribs</li>
+            <li class="ingredient">2 tablespoons of kosher salt</li>
+            <li class="ingredient">1 tablespoon of garlic powder</li>
+            <li class="ingredient">1 teaspoon of ground black pepper</li>
+            <li class="ingredient">1 cup of barbeque sauce</li>
         </ul>
 
         <h2>Steps</h2>
