--- a/recipes/mexican-quesadilla-casserole.html
+++ b/recipes/mexican-quesadilla-casserole.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Mexican Quesadilla Casserole</h1>
-        <img src="../images/mexican-quesadilla-casserole.jpg" alt="Mexican Quesadilla Casserole" height="400" width="400">
+        <img id="casserole" src="../images/mexican-quesadilla-casserole.jpg" alt="Mexican Quesadilla Casserole">
 
         <h2>Description</h2>
         <p>This recipe is super tasty and will have you feeling like you've been transported to Mexico!</p>
@@ -15,20 +15,20 @@
         <h2>Ingredients</h2>
         <ul>
             <li>Cooking Spray</li>
-            <li>1 pound of ground beef</li>
-            <li>1/2 cup of chopped onion</li>
-            <li>1 (15 oz.) can of tomato sauce</li>
-            <li>1 (15 oz.) can of black beans, rinsed and drained</li>
-            <li>1 (14.5 oz.) can of diced tomatoes with lime juice and cilantro</li>
-            <li>1 (8.75 oz.) can of whole kernel sweet corn</li>
-            <li>1 (4.5 oz.) can of chopped green chiles, drained</li>
-            <li>2 teaspoons of chili powder</li>
-            <li>1 teaspoon of ground cumin</li>
-            <li>1 teaspon of minced garlic</li>
-            <li>1/2 teaspon dried oregano</li>
-            <li>1/2 teaspoon red pepper flakes</li>
-            <li>6 flour tortillas</li>
-            <li>2 cups of shredded Cheddar cheese</li>
+            <li class="main ingredient">1 pound of ground beef</li>
+            <li class="ingredient">1/2 cup of chopped onion</li>
+            <li class="ingredient">1 (15 oz.) can of tomato sauce</li>
+            <li class="ingredient">1 (15 oz.) can of black beans, rinsed and drained</li>
+            <li class="ingredient">1 (14.5 oz.) can of diced tomatoes with lime juice and cilantro</li>
+            <li class="ingredient">1 (8.75 oz.) can of whole kernel sweet corn</li>
+            <li class="ingredient">1 (4.5 oz.) can of chopped green chiles, drained</li>
+            <li class="ingredient">2 teaspoons of chili powder</li>
+            <li class="ingredient">1 teaspoon of ground cumin</li>
+            <li class="ingredient">1 teaspon of minced garlic</li>
+            <li class="ingredient">1/2 teaspon dried oregano</li>
+            <li class="ingredient">1/2 teaspoon red pepper flakes</li>
+            <li class="ingredient">6 flour tortillas</li>
+            <li class="ingredient">2 cups of shredded Cheddar cheese</li>
         </ul>
 
         <h2>Steps</h2>
