Styled the home page using display, padding, and margin properties.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li class="nav-item"><a class="nav-link" href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
-            <li class="nav-item"><a class="nav-link" href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
-            <li class="nav-item"><a class="nav-link" href="./recipes/mexican-quesadilla-casserole.html">Mexican Quesadilla Casserole</a></li>
-        </ul>
+        <div>
+            <h1>Odin Recipes</h1>
+        </div>
+        <div class="nav">
+            <ul class="nav-bar">
+                <li class="nav-item"><a class="nav-link" href="./recipes/crockpot-italian-chicken.html">Crockpot Italian Chicken</a></li>
+                <li class="nav-item"><a class="nav-link" href="./recipes/simple-bbq-ribs.html">Simple BBQ Ribs</a></li>
+                <li class="nav-item"><a class="nav-link" href="./recipes/mexican-quesadilla-casserole.html">Mexican Quesadilla Casserole</a></li>
+            </ul>
+        </div>
     </body>
 </html>
